--- a/public/game/styles.css
+++ b/public/game/styles.css
@@ -1,6 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 html {
     color: white;
     font-family: 'VT323', monospace;
+}
+
+body {
+    height: 100vh;
+    width: 100%;
+    display: grid;
+    place-items: center;
 }
